test/expected/explain_felel_v.out
explain void f( ..., ... )
                ^
17: error: variadic specifier must be last
